--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,26 +25,30 @@ button {
 
 :root {
   /* Color names */
-  --white: #fbfbfe;
-  --off-white: #efeff3;
-  --light-gray: #e7e7ea;
-  --soft-gray: #d0d0d3;
-  --mid-gray: #a0a0a3;
-  --dark-gray: #656567;
-  --black-gray: #303042;
-  --black: #19191c;
+  --white: #f8f8f8;
+  --off-white: #e8e8e8;
+  --light-gray: #d7d7d8;
+  --silver: #b0b1b2;
+  --slate-gray: #909092;
+  --steel-gray: #656567;
+  --dark-gray: #424344;
+  --graphite: #303031;
+  --charcoal: #202021;
+  --black: #070707;
   --slate-blue: #5a4ba8;
   --light-slate-blue: #a18edf;
-  --transparent-white: #fbfbfee0;
+  --transparent-white: #ebebeee0;
+  --transparent-black: #202021a0;
   --transparent-off-white: #efeff3a0;
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
   --background-color-secondary: var(--off-white);
   --background-color-tertiary: var(--light-gray);
-  --text-color-primary: var(--black);
-  --text-color-secondary: var(--black-gray);
-  --text-color-tertiary: var(--dark-gray);
+  --background-transparent: var(--transparent-white);
+  --text-color-primary: var(--charcoal);
+  --text-color-secondary: var(--graphite);
+  --text-color-tertiary: var(--steel-gray);
   --accent-color: var(--slate-blue);
   --accent-color-light: var(--light-slate-blue);
   --card-border-radius: 6px;
@@ -76,6 +80,21 @@ button {
   /* Fallback values */
   --navbar-height: 77px;
   --footer-height: 43px;
+}
+
+/* Dark Theme */
+@media (prefers-color-scheme: dark) {
+  :root {
+  --background-color-primary: var(--charcoal);
+  --background-color-secondary: var(--graphite);
+  --background-color-tertiary: var(--dark-gray);
+  --background-transparent: var(--transparent-black);
+  --text-color-primary: var(--off-white);
+  --text-color-secondary: var(--light-gray);
+  --text-color-tertiary: var(--silver);
+  --accent-color: var(--light-slate-blue);
+  --accent-color-light: var(--slate-blue);
+  }
 }
 
 html {
@@ -125,7 +144,7 @@ h3 {
   top: 0px;
   left: 0px;
   right: 0px;
-  background-color: var(--transparent-off-white);
+  background-color: var(--background-transparent);
   backdrop-filter: blur(15px);
   padding: var(--spacing-s) var(--spacing-m);
   z-index: 1;
