--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
 * {
   margin: 0;
   padding: 0;
+  /* Makes theme transition smoothly */
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 *,
@@ -83,6 +85,7 @@ button {
   /* Fallback values */
   --navbar-height: 77px;
   --footer-height: 43px;
+  --menu-height-mobile: 120px;
 }
 
 /* Dark Theme */
@@ -99,6 +102,32 @@ button {
     --accent-color-light: var(--slate-blue);
     --shadow-color: var(--white-shadow);
   }
+}
+
+[data-theme='light'] {
+  --background-color-primary: var(--white);
+  --background-color-secondary: var(--off-white);
+  --background-color-tertiary: var(--light-gray);
+  --background-transparent: var(--transparent-white);
+  --text-color-primary: var(--charcoal);
+  --text-color-secondary: var(--dark-gray);
+  --text-color-tertiary: var(--steel-gray);
+  --accent-color: var(--slate-blue);
+  --accent-color-light: var(--light-slate-blue);
+  --shadow-color: var(--black-shadow);
+}
+
+[data-theme='dark'] {
+  --background-color-primary: var(--charcoal);
+  --background-color-secondary: var(--graphite);
+  --background-color-tertiary: var(--dark-gray);
+  --background-transparent: var(--transparent-black);
+  --text-color-primary: var(--off-white);
+  --text-color-secondary: var(--light-gray);
+  --text-color-tertiary: var(--silver);
+  --accent-color: var(--light-slate-blue);
+  --accent-color-light: var(--slate-blue);
+  --shadow-color: var(--white-shadow);
 }
 
 html {
@@ -179,7 +208,7 @@ h3 {
   text-align: center;
   border-radius: 4px;
   background-color: inherit;
-  transition: box-shadow 500ms ease, background-color 500ms ease;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 .navbar-item::after {
@@ -219,7 +248,7 @@ h3 {
 }
 
 .navbar-darkmode-toggle {
-  height: 2rem;
+  height: 1.75rem;
   vertical-align: middle;
 }
 
@@ -429,7 +458,6 @@ h3 {
   color: var(--text-color-secondary);
   font-weight: 500;
   font-size: var(--step--1);
-  transition: color 0.3s ease-out;
 
   &:hover {
     color: var(--accent-color);
@@ -690,13 +718,13 @@ h3 {
     min-height: unset;
   }
   .nav-container {
-    flex-direction: column;
-    justify-content: stretch;
-    align-items: stretch;
+    flex-wrap: wrap;
     width: var(--page-layout-wide);
   }
 
   .nav-home {
+    order: 1;
+    flex: 4 1 50vw;
     justify-content: space-between;
     width: auto;
     padding: var(--spacing-m) var(--spacing-s);
@@ -710,14 +738,34 @@ h3 {
   }
 
   .nav-navigation {
-    flex: 1;
+    order: 3;
     overflow: hidden;
-    height: 0px;
+    height: 0;
     transition: height 0.3s ease-in-out;
+    width: 100%;
   }
 
   .nav-navigation.is-open {
     height: var(--menu-height-mobile, 205px);
+  }
+
+  .nav-utils {
+    flex: 1 1 20vw;
+    order: 2;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 1rem;
+  }
+
+  .navbar-darkmode-toggle {
+    height: 2rem;
+    aspect-ratio: 1;
+  }
+
+  .navbar-darkmode-toggle svg {
+    height: 100%;
+    width: 100%;
   }
 
   .nav-toggle {
